# bas-c

./: .gitignore  README.md  meson.build
app/: ppid.1  ppid.bash  ppid.c  sldbg.c
debian/: bas-c.install  changelog  control  libbas-c-dev.install  libbas-c1.install  rules
src/: module.c
src/bas/base/: str_test.c  string_list.h  wstring.c  wstring_list.c
src/bas/bash/: bb-util.c
src/bas/cli/: args.c  cli_parser.h  opt_parser.h  program.h  program_test.c
src/bas/io/: file.c  fileent_list.h  wfileent_list.h
src/bas/locale/: unicode.h
src/bas/log/: log_test.c  uselog.h
src/bas/proc/: dbgthread.c  pid.h
src/base/: stdio.c  str.c  string_list.c  wstring.c  wstring_list.h
src/bash/: bb-util.c
src/cli/: args.h  cli_parser.c  cli_parser.h  csi.h  opt_parser.c  program.c  program.h  program_test.c
src/io/: file.c  file.h  file_type.h  fileent_list.c  path.c  path.h  wfileent_list.c
src/locale/: unicode.c  unicode.h
src/log/: deflog.h  log.c  logger.c  logger.h  syslog.c  uselog.h  uselogger.h
src/proc/: dbgaction.c  dbgaction.h  dbgthread.c  env.c  env.h  pid.c
src/util/: prefix_map.c
